<resources>
    <string name="app_name">Yet Another Evil Insult Generator</string>

    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="italian">Italian</string>
    <string name="chinese">Chinese</string>
    <string name="hindi">Hindi</string>
    <string name="arabic">Arabic</string>
    <string name="portuguese">Portuguese</string>
    <string name="bengali">Bengali</string>
    <string name="russian">Russian</string>
    <string name="japanese">Japanese</string>
    <string name="javanese">Javanese</string>
    <string name="swahili">Swahili</string>
    <string name="german">German</string>
    <string name="korean">Korean</string>
    <string name="french">French</string>
    <string name="telugu">Telugu</string>
    <string name="marathi">Marathi</string>
    <string name="turkish">Turkish</string>
    <string name="tamil">Tamil</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="urdu">Urdu</string>
    <string name="greek">Greek</string>
    <string name="czech">Czech</string>
    <string name="finnish">Finnish</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="bulgarian">Bulgarian</string>
    <string name="catalan">Catalan</string>
    <string name="danish">Danish</string>
    <string name="dutch">Dutch</string>
    <string name="hebrew">Hebrew</string>
    <string name="hungarian">Hungarian</string>
    <string name="indonesian">Indonesian</string>
    <string name="kannada">Kannada</string>
    <string name="norwegian">Norwegian</string>
    <string name="persian">Persian</string>
    <string name="polish">Polish</string>
    <string name="punjabi">Punjabi</string>
    <string name="romanian">Romanian</string>
    <string name="serbian">Serbian</string>
    <string name="sinhala">Sinhala</string>
    <string name="swedish">Swedish</string>
    <string name="thai">Thai</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="latin">Latin</string>
    <string name="generator">Generator</string>
    <string name="generate">Generate</string>
    <string name="offline">Offline</string>
    <string name="no_offline_insults_notice">No offline insults found. Either you haven\'t generated any insults or no insults match your filter settings.</string>
    <string name="generation_failed">Generation failed</string>
    <string name="settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="generator_url">Generator URL</string>
    <string name="generator_url_main">Main (https://evilinsult.com/)</string>
    <string name="generator_url_backup">Backup (https://slave.evilinsult.com/)</string>
    <string name="share">Share</string>
    <string name="insult">Insult</string>
    <string name="retry">Retry</string>
    <string name="generate_insult_prompt">You haven\'t generated any insults. Press the button at the bottom to do so.</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Do you want to delete %s?</string>
    <string name="deleted">%s deleted</string>
    <plurals name="insults">
        <item quantity="one">%d insult</item>
        <item quantity="other">%d insults</item>
    </plurals>
    <plurals name="insults_deleted">
        <item quantity="one">%d insult deleted</item>
        <item quantity="other">%d insults deleted</item>
    </plurals>
    <string name="selected">%s selected</string>
    <string name="search_content">Search content</string>
    <string name="search_insult_contents_hint">Text to search insult contents from</string>
    <string name="language">Language</string>
    <string name="filter_insults">Filter insults</string>
    <string name="none">None</string>
    <string name="reset">Reset</string>
    <string name="alphabetical_ascending">Alphabetical (Ascending)</string>
    <string name="alphabetical_descending">Alphabetical (Descending)</string>
    <string name="sort_insults">Sort insults</string>
    <string name="favorites_first">Favorites first</string>
    <string name="options">Options</string>
    <string name="info">Info</string>
    <string name="insult_info">Insult info</string>
    <string name="currently_favorited">Currently favorited</string>
    <string name="not_favorited">Not favorited</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_insult_to_favorites_prompt">Do you want to add this insult to favorites?</string>
    <string name="delete_from_favorites">Delete from favorites</string>
    <string name="remove_insult_from_favorites_prompt">Do you want to remove this insult from favorites?</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="delete_insult">Delete insult</string>
    <string name="delete_insult_confirmation">Do you really want to delete this insult? You probably won\'t be seeing it again for quite some time.</string>
    <string name="insult_deleted">Insult deleted</string>
    <string name="insult_of_the_day">Insult of the Day</string>
    <string name="enabled">Enabled</string>
    <string name="pick_time">Pick time</string>
    <string name="notifications">Notifications</string>
    <string name="iotd_notification_channel_description">Notifications for the \"Insults of the Day\" feature</string>
    <string name="generating_insult">Generating insult</string>
    <string name="explanation">Explanation</string>
    <string name="notification_permission_required">Notification permission required</string>
    <string name="iotd_notification_permission_prompt">Insult of the Day needs notification permission to work. Press %s below to grant the permission.</string>
    <string name="eig_status_page">Evil Insult Generator status page</string>
    <string name="iotd_explanation">When Insult of the Day is enabled, the app automatically generates an insult and sends you a notification every day at your specified time.\n\nNote that the app will do so approximately 1–3 minutes later than your set time – this is an Android limitation I can\'t do much about.</string>
    <string name="constraints">Constraints</string>
    <string name="unmetered_network">Unmetered network</string>
    <string name="device_charging">Device is charging</string>
    <string name="device_idle">Device is idle</string>
    <string name="battery_not_low">Battery isn\'t low</string>
    <string name="storage_not_low">Storage isn\'t low</string>
    <string name="periodic_insult_updates">Periodic insult updates</string>
    <string name="number_of_insults_updated">Number of insults updated</string>
    <string name="how_many_insults_updated_periodically_message">Enter how many insults will be updated periodically (maximum %d). Set to 0 to disable this feature.</string>
    <string name="update_interval">Update interval</string>
    <string name="too_many_insults_error">Number of insults generated mustn\'t be more than %d. Servers have limits too, you know.</string>
    <string name="format_number_of_insults_error">Value out of bounds of an int</string>
    <string name="all_insults_selected_are_favorites">All insults selected are favorites.</string>
    <string name="no_browser_app_installed_error">There\'s no browser app installed</string>
    <string name="iotd_widget_initial_state_notice">This widget will be updated with the new insult the next time Insult of the Day runs.</string>
    <string name="appearance_settings">Appearance settings</string>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
</resources>