<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="10dp">

    <CheckBox
        android:id="@+id/favorites_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorites_first"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/toggle_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/favorites_first"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/none"
            style="?attr/themeDependantFilterChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/alphabetical_ascending"
            style="?attr/themeDependantFilterChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alphabetical_ascending"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/alphabetical_descending"
            style="?attr/themeDependantFilterChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alphabetical_descending"/>

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>