<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:gravity="center"
        android:text="@string/options"
        android:background="?attr/selectableItemBackground"
        style="?attr/themeDependantTitleStyle"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintTop_toBottomOf="@+id/title_options">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="6dp"
                android:paddingVertical="10dp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                app:drawableStartCompat="@drawable/favorite"
                android:drawablePadding="10dp"/>

            <TextView
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="6dp"
                android:paddingVertical="10dp"
                android:text="@string/delete"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                app:drawableStartCompat="@drawable/delete"
                android:drawablePadding="10dp"/>

            <TextView
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="6dp"
                android:paddingVertical="10dp"
                android:text="@string/share"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                app:drawableStartCompat="@drawable/share"
                android:drawablePadding="10dp"/>

            <TextView
                android:id="@+id/copy_to_clipboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="6dp"
                android:paddingVertical="10dp"
                android:text="@string/copy_to_clipboard"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                app:drawableStartCompat="@drawable/content_paste"
                android:drawablePadding="10dp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/title_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:gravity="center"
        android:text="@string/info"
        android:background="?attr/selectableItemBackground"
        style="?attr/themeDependantTitleStyle"
        app:layout_constraintTop_toBottomOf="@id/options" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintTop_toBottomOf="@+id/title_info">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="6dp"
                android:paddingVertical="10dp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                app:drawableStartCompat="@drawable/translate"
                android:drawablePadding="10dp"/>

            <TextView
                android:id="@+id/created_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="6dp"
                android:paddingVertical="10dp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                app:drawableStartCompat="@drawable/person"
                android:drawablePadding="10dp"/>

            <TextView
                android:id="@+id/created_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="6dp"
                android:paddingVertical="10dp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                app:drawableStartCompat="@drawable/schedule"
                android:drawablePadding="10dp"/>

            <TextView
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="6dp"
                android:paddingVertical="10dp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground"
                app:drawableStartCompat="@drawable/chat"
                android:drawablePadding="10dp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>